# cf-stats

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml  scheduled_workflow.yml  test.yml
Data-Analysis-Project-master/: Microsoft Visual Mart.pbix  README.md
app/: constant.py  main.py
app/models/: user.py
app/services/: cf_request_handler.py  cf_response_parser.py  generator_interface.py  rating_badge_generator.py  stat_card_generator.py  svg_factory.py
app/utils/: acronym.py  cf_request_handler.py  cf_response_parser.py  file_utils.py  string_utils.py
config/: .env.template  config.py
docs/: BRANCH-NAMING.md  CONTRIBUTING.md  INSTALLATIONSTEPS.md
src/: constant.py  main.py
src/utils/: cf_request_handler.py  cf_response_parser.py
tests/: conftest.py
tests/fixtures/: cf_response.py  response_fixtures.py
tests/test_utils/: test_acronym.py  test_cf_parser.py  test_cf_request_handler.py  test_cf_request_parser.py  test_string_utils.py
