[build-system]
requires = ["setuptools >= 40.9.0", "wheel >= 0.36.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "cf-stats"
version = "0.0.1"
authors = ["Sudipto Baral <sudiptobaral.me@gmail.com>"]
description = "Simple codeforces stat card for GitHub readme."
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/sudiptob2/cf-stats"
repository = "https://github.com/sudiptob2/cf-stats"
keywords = ["GitHub", "Codeforces", "GitHub Readme", "Stat Card"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "22.1.0"
certifi = "2022.6.15"
charset-normalizer = "2.1.0"
idna = "3.3"
iniconfig = "1.1.1"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.1"
mock = "4.0.3"
packaging = "21.3"
pluggy = "1.0.0"
py = "1.11.0"
pybadges = "3.0.0"
pydantic = "1.9.2"
pyparsing = "3.0.9"
pytest = "7.1.2"
pytest-mock = "3.8.2"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
requests = "2.28.1"
six = "1.16.0"
tomli = "2.0.1"
typing-extensions = "4.3.0"
urllib3 = "1.26.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
